--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>utils</module>
         <module>chapter2</module>
+        <module>chapter1</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
